<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/black"
    tools:context=".pages.detail.MovieDetailFragment"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMovieBlur"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:foreground="@drawable/gradient_to_invisible"
            android:contentDescription="@string/post_description"
            app:layout_constraintBottom_toBottomOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            style="@style/BorderlessButton.Back"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMovie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/post_description"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack"
            tools:background="@drawable/not_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMovie"
            tools:text="Orgulho e Paixão" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_dark"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="Novela" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_light"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGender"
            tools:text="'Orgulho e Paixão' tem seus personagens livremente inspirados no universo da escritora ingles Jane Austen. É uma história romântica." />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btPlay"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/play"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btMyList"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btMyList"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="24dp"
            android:background="@color/white"
            android:text="@string/add_my_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btPlay"
            app:layout_constraintTop_toTopOf="@+id/btPlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tbMovie"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:tabTextColor="@color/grey_dark"
            app:tabSelectedTextColor="@color/white"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/btPlay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpSimilars"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_min="350dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tbMovie" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>