<?xml version="1.0" encoding="utf-8"?>
<GridView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.detail.view_pager.SimilarMoviesFragment"
    android:background="@color/grey_darkest"
    android:id="@+id/gvMovies"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:numColumns="3"
    android:gravity="center"
    android:horizontalSpacing="16dp"
    android:paddingVertical="24dp"
    android:paddingHorizontal="24dp"
    android:nestedScrollingEnabled="true"
    android:scrollbars="none"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:listitem="@layout/item_home_second_list">


</GridView>